--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,7 @@
   
   <script language="javascript" type="text/javascript" src="sketch.js"></script>
   <script language="javascript" type="text/javascript" src="blob.js"></script>
+  <script language="javascript" type="text/javascript" src="grid.js"></script>
 
 </head>
 
