--- a/public/index.html
+++ b/public/index.html
@@ -1,16 +1,24 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
 <head>
   <meta charset="UTF-8">
   <script type="text/javascript" src="https://cdn.socket.io/socket.io-1.4.5.js"></script>
   <script language="javascript" type="text/javascript" src="https://cdn.jsdelivr.net/npm/p5@1.4.1/lib/p5.min.js"></script>
-  
+ 
   <script language="javascript" type="text/javascript" src="sketch.js"></script>
   <script language="javascript" type="text/javascript" src="blob.js"></script>
   <script language="javascript" type="text/javascript" src="grid.js"></script>
 
+  <link rel="stylesheet" href="style/style.css">
 </head>
-
-<body style="display: flex; flex-direction: column; justify-content: center; align-items: center; height: 100vh;">
-    <h1>Agar io</h1>
+<body>
+    <h1>Agar.io</h1>
+    <div id="game-container">
+      <div id="canvas-container"></div>
+      <aside>
+        <h2>Players</h2>
+        <ul id="player-list"></ul>
+      </aside>
+    </div>
 </body>
 </html>
