fix: Code structure

--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,8 @@
  
   <script language="javascript" type="text/javascript" src="sketch.js"></script>
   <script language="javascript" type="text/javascript" src="blob.js"></script>
-  <script language="javascript" type="text/javascript" src="grid.js"></script>
+  <script language="javascript" type="text/javascript" src="utils/grid.js"></script>
+  <script language="javascript" type="text/javascript" src="utils/playerList.js"></script>
 
   <link rel="stylesheet" href="style/style.css">
 </head>
